fixed new task layoutagain

--- a/app/src/main/res/layout/activity_new_task.xml
+++ b/app/src/main/res/layout/activity_new_task.xml
@@ -40,20 +40,18 @@
         android:id="@+id/imageView2"
         android:layout_width="300dp"
         android:layout_height="225dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="40dp"
         android:background="#3A378E"
         android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/textView34"
+        app:layout_constraintEnd_toEndOf="@+id/textView34"
+        app:layout_constraintStart_toStartOf="@+id/textView34"
+        app:layout_constraintTop_toTopOf="@+id/textView34"
         app:srcCompat="@drawable/ic_menu_camera" />
 
     <TextView
         android:id="@+id/textView34"
         android:layout_width="310dp"
-        android:layout_height="230dp"
+        android:layout_height="235dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="35dp"
         android:background="@drawable/backforimages"
