--- a/app/src/main/res/layout/activity_joingroup.xml
+++ b/app/src/main/res/layout/activity_joingroup.xml
@@ -26,14 +26,12 @@
 
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="155dp"
         android:layout_marginTop="150dp"
-        android:layout_marginEnd="156dp"
         android:background="@drawable/buttonhintergrund"
         android:fontFamily="@font/segoeui"
         android:text="@string/join"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/existinggroupname"
+        app:layout_constraintStart_toStartOf="@+id/existinggroupname"
         app:layout_constraintTop_toBottomOf="@+id/existinggroupname" />
 
     <EditText
@@ -43,11 +41,13 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="10dp"
 
+        android:layout_marginEnd="101dp"
         android:background="@drawable/textinputfeldloginregister"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="@string/groupname"
+        android:inputType="textPersonName"
         android:textColor="@android:color/white"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView28" />
 
@@ -68,12 +68,13 @@
         android:id="@+id/textView28"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
         android:layout_marginTop="90dp"
+        android:layout_marginEnd="80dp"
         android:fontFamily="@font/segoeuib"
         android:text="@string/groupnamedoppel"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/existinggroupname"
+        app:layout_constraintStart_toStartOf="@+id/existinggroupname"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
@@ -86,6 +87,7 @@
         android:clickable="true"
         android:fontFamily="@font/segoeui"
         android:text="@string/whydoineedagroup"
+
         android:textColor="@android:color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
